--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,7 +29,7 @@
       </div>
 
       <div class="footer-col footer-col-3">
-        <p>{{ site.description }}</p>
+        <p><img src="{{site.url}}/img/judson-3.jpg" style="width:100px;height:100px;border:0;"></p>
       </div>
     </div>
 
